--- a/XFInputAlertDialogService/XFInputAlertDialogService/App.xaml
+++ b/XFInputAlertDialogService/XFInputAlertDialogService/App.xaml
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="XFInputAlertDialogService.App">
-	<Application.Resources>
+<unity:PrismApplication
+    x:Class="XFInputAlertDialogService.App"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:unity="clr-namespace:Prism.Unity;assembly=Prism.Unity.Forms">
+    <Application.Resources>
 
-		<!-- Application resource dictionary -->
+        <!--  Application resource dictionary  -->
 
-	</Application.Resources>
-</Application>
+    </Application.Resources>
+</unity:PrismApplication>
